--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@modelcontextprotocol/inspector-cli": "^0.17.1",
     "@modelcontextprotocol/inspector-client": "^0.17.1",
     "@modelcontextprotocol/inspector-server": "^0.17.1",
-    "@modelcontextprotocol/sdk": "^1.18.0",
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "concurrently": "^9.2.0",
     "node-fetch": "^3.3.2",
     "open": "^10.2.0",
@@ -67,6 +67,7 @@
     "husky": "^9.1.7",
     "jest-fixed-jsdom": "^0.0.9",
     "lint-staged": "^16.1.5",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "typescript": "^5.4.2"
