--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ client/tsconfig.node.tsbuildinfo
 cli/build
 test-output
 tool-test-output
+metadata-test-output
 # symlinked by `npm run link:sdk`:
 sdk
 client/playwright-report/
